added favicon switch for dark theme added requirements added my icon to hero section

--- a/resume/static/css/herosection.css
+++ b/resume/static/css/herosection.css
@@ -28,6 +28,13 @@
     object-position: top;
 }
 
+.my-icon{
+    width: 44% !important;
+    height: 15% !important;
+    left: 57% !important;
+    top: 19% !important;
+}
+
 .hero-image .img-overlay{
     opacity: 0.5;
 }
