--- a/resume/templates/main/main.html
+++ b/resume/templates/main/main.html
@@ -11,7 +11,11 @@
   <link rel="stylesheet" href="{% static 'css/aboutme.css'%}">
   <link rel="stylesheet" href="{% static 'css/works.css'%}">
   <link rel="stylesheet" href="{% static 'css/navtransition.css'%}">
-  <title>Title</title>
+
+<!--  ICONS AND OTHER-->
+  <link rel="icon" href="{% static 'images/logos/favicon_dark/favicon.ico' %}" id="light-scheme-icon" media="(prefers-color-scheme: dark)">
+  <link rel="icon" href="{% static 'images/logos/favicon_light/favicon.ico' %}" id="dark-scheme-icon" media="(prefers-color-scheme: light)">
+  <title>CYBERMIKE</title>
 </head>
 <body>
 <div class="wrapper">
@@ -73,6 +77,7 @@
     <div class="hero-image">
       <img src="{% static 'images/me_background_removed.png' %}">
       <img class="img-overlay" src="{% static 'images/me_background_removed.png' %}">
+      <img class="my-icon" src="{% static 'images/logos/png/logo-no-background.png' %}">
       <div class="img-line">
         <div class="img-top-line"></div>
       </div>
